--- a/main.tex
+++ b/main.tex
@@ -37,7 +37,7 @@
     Google AI | 340 Main Street, Los Angeles, CA 90291, United States
 }
 
-\date[AJCAI December 2022] % (optional)
+\date{\today} % (optional)
 {
     \snapper \bluecod \gurnard \tarakihi 
 }
@@ -117,7 +117,7 @@ Mum was a sports journalist who covered Softball in New Zealand. She then went o
 In lieu of donations,
 
 \sout{
-    wire etheruem directly to my cold wallet here: 
+    wire ethereum directly to my cold wallet here: 
     \\ 
     \$ETH $\to$ 0x045BA9c0c69AF53B2Fca0e1A3769E44D9a328696
 }
